# pathcify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: run-tests.yml
src/: cli.rs  lib.rs  main.rs  slug.rs  walker.rs
tests/: dotify.rs  full_run.rs  skip_files.rs  test.rs
tests/output_conflict/spaced.repository/: Conflict File.txt  conflict.file.txt
