[package]
name = "pathcify"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "CLI tool to recursively slugify file and directory names using dots, removing special characters and normalizing names."
homepage = "https://github.com/ewilan-riviere/m4b-extractor"
repository = "https://github.com/ewilan-riviere/m4b-extractor"
readme = "README.md"
keywords = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1.10"
deunicode = "1.3"

[dev-dependencies]
tempfile = "3.10"
